fix 3234 add overlay to menu
* ensure article header is still visible on article pages using a new z-index variable
* that z-index is calced from the site-header value
* this ensures the search box overlay still works as it does currently, covering the artcile header
* overlay is on ToC click and tested as click-away in both contexts: with and without an article header

--- a/site/css/sidebar.scss
+++ b/site/css/sidebar.scss
@@ -12,6 +12,11 @@
     @include xxlg-up {
         height: 100%;
     }
+
+    .entry-sidebar__overlay {
+        @include overlay;
+        z-index: $zindex-sidebar - 1;
+    }
 }
 
 .entry-sidebar {
